Fixed the width alignment by adding 100% to all containers. Deleted and added Sprite images

--- a/stylesheet/mainCss.scss
+++ b/stylesheet/mainCss.scss
@@ -37,12 +37,6 @@ p {
   text-align: center;
 }
 
-img.center {
-  display: block;
-  margin: 0 auto;
-}
-
-
 
 /*
   General -----------------------------------------------------------------------
@@ -80,17 +74,6 @@ nav {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-footer {
-  padding-left: 200px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  height: 50px;
-  background-color: $darkGrey;
-}
-
 
 ul {
   display: block;
@@ -135,11 +118,6 @@ button:focus {
   main .column1-2, main .column2-2{
     width: 100%;
   }
-  main .column1-3, main .column2-3, main .column3-3{
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-  }
   main .imageSlider {
     height: 380px;
   }
@@ -166,23 +144,6 @@ button:focus {
   float: left;
 }
 
-.column1-3 {
-  width: 28%;
-  float: left;
-}
-
-.column2-3 {
-  width: 28%;
-  float: left;
-  margin-left: 2%;
-  margin-right: 2%;
-}
-
-.column3-3 {
-  width: 28%;
-  float: left;
-}
-
 .column1 {
   float: none;
 }
@@ -195,9 +156,6 @@ button:focus {
   }
 };
 
-@include containerModifier(auto, nested);
-
-@include containerModifier(0, wide);
 
 ::-webkit-scrollbar {
   width: 5px;
@@ -211,23 +169,9 @@ button:focus {
   }
 }
 
-
-#collapseBanner {
-  width: 100%;
-  height: 300px;
-  position: fixed;
-  top: 100px;
-  background: #707070;
-}
-
-
 /*
   Nav bars -----------------------------------------------------------------------
 */
-.wrapper {
-  position: relative;
-  height: 100%;
-}
 
 .nav {
   background-color: $darkGrey;
@@ -351,10 +295,6 @@ button:focus {
   opacity: 0.5;
 }
 
-.flag {
-  width: 150px;
-  height: 150px;
-}
 
 .mainFont {
   font-family: LondonMM, sans-serif;
@@ -422,6 +362,13 @@ button:focus {
   text-align: right;
 }
 
+.descriptionContact {
+  font-family: LondonBetween, sans-serif;
+  color: $beige;
+  font-size: 16px;
+}
+
+
 #scrollDownIcon {
   text-align: center;
   cursor: pointer;
@@ -460,14 +407,6 @@ button:focus {
 .paneAlignmentAbout {
   overflow: hidden;
   visibility: hidden;
-}
-
-.blueShade {
-  background-color: $navy;
-  z-index: -1;
-  min-width: 100%;
-  min-height: 100%;
-  opacity: 0.5;
 }
 
 
@@ -520,24 +459,22 @@ button:focus {
 
 //Lang Image Sprite
 
-.langIcons8mvc, .langIcons10azure, .langIcons4jquery, .langIcons5coffeescript, .langIcons6knockoutjs,
-.langIcons11lamp, .langIcons9php, .langIcons3sass, .langIcons1html5, .langIcons2bootstrap,
+.langIcons8mvc, .langIcons10azure, .langIcons4jquery, .langIcons6knockoutjs, .langIcons11lamp,
+.langIcons9php, .langIcons5coffeescript, .langIcons3sass, .langIcons1html5, .langIcons2bootstrap,
 .langIcons7angularjs
 { display: inline-block; background: url('../image/languages/langIcons.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
 
 .langIcons8mvc { background-position: -0px -0px; width: 211px; height: 100px; }
 .langIcons10azure { background-position: -0px -100px; width: 200px; height: 100px; }
 .langIcons4jquery { background-position: -0px -200px; width: 200px; height: 100px; }
-.langIcons5coffeescript { background-position: -0px -300px; width: 200px; height: 100px; }
-.langIcons6knockoutjs { background-position: -0px -400px; width: 200px; height: 100px; }
-.langIcons11lamp { background-position: -0px -500px; width: 199px; height: 100px; }
-.langIcons9php { background-position: -0px -600px; width: 186px; height: 100px; }
+.langIcons6knockoutjs { background-position: -0px -300px; width: 200px; height: 100px; }
+.langIcons11lamp { background-position: -0px -400px; width: 199px; height: 100px; }
+.langIcons9php { background-position: -0px -500px; width: 186px; height: 100px; }
+.langIcons5coffeescript { background-position: -0px -600px; width: 134px; height: 100px; }
 .langIcons3sass { background-position: -0px -700px; width: 133px; height: 100px; }
 .langIcons1html5 { background-position: -0px -800px; width: 100px; height: 100px; }
 .langIcons2bootstrap { background-position: -100px -800px; width: 100px; height: 100px; }
 .langIcons7angularjs { background-position: -0px -900px; width: 95px; height: 100px; }
-
-
 
     /*
       Projects -----------------------------------------------------------------------
@@ -549,6 +486,7 @@ button:focus {
   max-width: 1770px;
   min-height: 1800px;
   padding-left: 150px;
+  width: 100%;
   -webkit-transform: translateY(0);
   -moz-transform:translateY(0);
   -ms-transform:translateY(0);
@@ -576,20 +514,6 @@ button:focus {
     font-size: 28px;
     margin: 0;
   }
-}
-
-.projectPaneTitleHeader {
-  width: 70%;
-  margin: 0 auto 0 auto;
-  top: 0;
-}
-
-.projectPaneTitleHeaderContainer{
-  display: none;
-  position: fixed;
-  margin: 0 auto 0 auto;
-  overflow: hidden;
-  width: 90%;
 }
 
 .projectPane {
@@ -755,6 +679,7 @@ button:focus {
   overflow: hidden;
   height: 300px;
   padding-left: 150px;
+  width: 100%;
   -webkit-transform: translateY(0);
   -moz-transform:translateY(0);
   -ms-transform:translateY(0);
@@ -785,10 +710,6 @@ button:focus {
   color: $beige;
 }
 
-#githubTitle {
-  visibility: hidden;
-}
-
 .mega-octicon {
   color: $beige;
   &:hover {
@@ -817,44 +738,16 @@ button:focus {
 */
 
 
-.comingLeft {
-  -webkit-animation: comingLeft 1.5s;
-  -o-animation: comingLeft 1.5s;
-  animation: comingLeft 1.5s;
-  -webkit-transform: translate(0,0);
-  -moz-transform: translate(0,0);
-  -ms-transform: translate(0,0);
-  -o-transform: translate(0,0);
-  transform: translate(0,0);
-}
-@keyframes comingLeft {
-  0% {
-    -webkit-transform: translate(-100%,0);
-    -moz-transform: translate(-100%,0);
-    -ms-transform: translate(-100%,0);
-    -o-transform: translate(-100%,0);
-    transform: translate(-100%,0);
-  }
-
-  100%{
-    -webkit-transform: translate(0,0);
-    -moz-transform: translate(0,0);
-    -ms-transform: translate(0,0);
-    -o-transform: translate(0,0);
-    transform: translate(0,0);
-  }
-}
-
 
 .comingUp{
   -webkit-animation: comingUp 0.5s;
   -o-animation: comingUp 0.5s;
   animation: comingUp 0.5s;
-  -webkit-transform: translate(0, -10px);
-  -moz-transform: translate(0, -10px);
-  -ms-transform: translate(0, -10px);
-  -o-transform: translate(0, -10px);
-  transform: translate(0, -10px);
+  -webkit-transform: translate(0, -5px);
+  -moz-transform: translate(0, -5px);
+  -ms-transform: translate(0, -5px);
+  -o-transform: translate(0, -5px);
+  transform: translate(0, -5px);
 }
 
 @keyframes comingUp {
